kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chessgame-ingress
  namespace: chessgame
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - chess.visheshxdevs.in
      secretName: chessgame-tls
  rules:
    - host: chess.visheshxdevs.in
      http:
        paths:
          - path: /api/ws
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: https-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
